# crypto-l2-capture

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py  settings.yaml
market_data/: capture.py  cli.py
market_data/analysis/: __init__.py  metrics.py
market_data/book/: l2.py  snapshot.py
market_data/exchanges/: __init__.py  base.py
market_data/exchanges/binance/: __init__.py  rest.py  ws.py
market_data/exchanges/bybit/: __init__.py  rest.py  ws.py
market_data/exchanges/deribit/: __init__.py  rest.py  ws.py
market_data/exchanges/okx/: __init__.py  rest.py  ws.py
market_data/feeds/: binance_rest.py  binance_ws.py
market_data/storage/: parquet.py
tests/: conftest.py  test_adapters.py  test_capture.py  test_l2.py  test_rest_client.py  test_ws_client.py
