[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binance-l2-capture"
version = "0.1.0"
description = "Gap-free Binance USDT-M futures L2 order book capture pipeline"
requires-python = ">=3.11"
dependencies = [
    # WebSocket and HTTP
    "websockets>=12.0",
    "aiohttp>=3.9",

    # Data
    "polars>=0.20",
    "pyarrow>=14.0",

    # Config
    "pydantic>=2.5",
    "pyyaml>=6.0",

    # Logging
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["market_data", "config"]
